# oci2rootfs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/oci2rootfs/: Cargo.toml
crates/oci2rootfs-cli/: Cargo.toml
crates/oci2rootfs-cli/src/: main.rs
crates/oci2rootfs/src/: convert.rs  error.rs  ext4.rs  ext4_options.rs  layer.rs  lib.rs  oci.rs  path.rs  pull.rs  tar_source.rs
crates/oci2rootfs/src/overlay2/: apply.rs  mod.rs
crates/oci2rootfs/tests/: apply_layer.rs  e2e_real_image.rs  ext4_writer.rs  oci_resolve.rs  public_api.rs
web/: .gitignore  CONTENT.md  README.md  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/waitlist/: route.ts
web/app/privacy/: page.tsx
web/app/thanks/: page.tsx
web/components/: Container.tsx  DemoPlayer.tsx  Footer.tsx  FounderNote.tsx  Hero.tsx  HowItWorks.tsx  Nav.tsx  ProblemTable.tsx  TechCredibility.tsx  UseCases.tsx  WaitlistForm.tsx  Wordmark.tsx
