[workspace]
members = ["crates/oci2rootfs", "crates/oci2rootfs-cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["ArcBox Labs <oss@arcbox.dev>", "AprilNEA <dev@aprilnea.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/arcbox-labs/oci2rootfs"

[workspace.dependencies]
oci2rootfs = { version = "0.1.0", path = "crates/oci2rootfs" }

containerregistry = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
ext4-lwext4 = "0.1"
