[package]
name = "oci2rootfs"
description = "Convert OCI container images to ext4 root filesystems"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tar = "0.4"
flate2 = "1.0"
zstd = "0.13"
thiserror = "2"
arcbox-ext4.workspace = true
containerregistry-image = "0.1.1"
containerregistry-layout = "0.1.1"
containerregistry-auth = { version = "0.1.1", optional = true }
containerregistry-registry = { version = "0.1.1", optional = true }

[dev-dependencies]
tempfile = "3"
sha2 = "0.10"
serial_test = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[features]
default = ["remote"]
remote = ["dep:containerregistry-auth", "dep:containerregistry-registry"]
